# air-detector

./: .gitignore  README.md  approxymation.octave.txt  approxymation.ods  calc.ods  emulator.simu  o2a2.sim1
3d/: box-bathroom-box.stl  box-bathroom-cup.stl  box-bathroom-light-sensor-holder.stl  box-slepingroom-box.stl  box-slepingroom-cup.stl  box-slepingroom-mhz19b-lock.stl  box-slepingroom-wire-holder.stl  box-slepingroom.FCStd
hass/board1/: mqtt_sensors.yaml  ui.yaml
hass/board2/: automation-triggers.yaml  mqtt_sensors.yaml  mqtt_switch.yaml  template_switches.yaml  timer.yaml  ui.yaml  vars.yaml
schematics/air-detector/: air-detector.csv  air-detector.kicad_pcb  air-detector.kicad_prl  air-detector.kicad_pro  air-detector.kicad_sch  air-detector.xml  board1.kicad_sch  board2.kicad_sch  core.kicad_sch  fp-info-cache
schematics/air-detector/production-1/: air-detector-B_Cu.gbr  air-detector-B_Mask.gbr  air-detector-B_Paste.gbr  air-detector-B_Silkscreen.gbr  air-detector-Edge_Cuts.gbr  air-detector-F_Cu.gbr  air-detector-F_Mask.gbr  air-detector-F_Paste.gbr  air-detector-F_Silkscreen.gbr  air-detector-NPTH-drl_map.gbr  air-detector-NPTH.drl  air-detector-PTH-drl_map.gbr  air-detector-PTH.drl  air-detector-job.gbrjob
schematics/air-detector/production-2/: air-detector-B_Cu.gbr  air-detector-B_Mask.gbr  air-detector-B_Paste.gbr  air-detector-B_Silkscreen.gbr  air-detector-Edge_Cuts.gbr  air-detector-F_Cu.gbr  air-detector-F_Mask.gbr  air-detector-F_Paste.gbr  air-detector-F_Silkscreen.gbr  air-detector-NPTH-drl_map.gbr  air-detector-NPTH.drl  air-detector-PTH-drl_map.gbr  air-detector-PTH.drl  air-detector-job.gbrjob
src/: .cproject  .project  CMakeLists.txt  sdkconfig.board1  sdkconfig.board2  sdkconfig.example  version.txt
src/main/: CMakeLists.txt  Kconfig.projbuild  main.c
src/main/adc/: adc.c  adc.h
src/main/adc/adc_v_core/: adc_v_core.c  adc_v_core.h  adc_v_core_nvs.c  adc_v_core_nvs.h
src/main/adc/light/: light.c  light.h
src/main/adc/mq136/: mq136.c  mq136.h  mq136_nvs.c  mq136_nvs.h
src/main/adc/mq7/: mq7.c  mq7.h
src/main/adc/o2a2/: o2a2.c  o2a2.h  o2a2_nvs.c  o2a2_nvs.h
src/main/common/: mqtt.c  mqtt.h  mqtt_healthcheck.c  mqtt_ota.c  nvs_rw.c  wifi.c
src/main/fans/fan/: fan.c  fan.h
src/main/fans/fan_pwm/: fan_pwm.c  fan_pwm.h  fan_pwm_api.c  fan_pwm_api.h  fan_pwm_nvs.c
src/main/i2c/: i2c_impl.c  i2c_impl.h
src/main/i2c/bme280/: bme280.c  bme280.h  bme280_api.c  bme280_api.h  bme280_math.c
src/main/i2c/sgp41/: sgp41.c  sgp41.h  sgp41_api.c  sgp41_api.h  sgp41_def.h
src/main/i2c/sgp41/raw2index/: sensirion_gas_index_algorithm.h
src/main/led/: led.c  led.h  led_encoder.c  led_encoder.h
src/main/light/: light.c
src/main/log/: log.h
src/main/mq136/: mq136.c  mq136_nvs.c
src/main/touchpad/: touchpad.c  touchpad.h  touchpad_api.c  touchpad_api.h
src/main/uart/: uart_core.c  uart_core.h
src/main/uart/mh_z19b/: mh_z19b.c  mh_z19b.h
src/main/uart/pms7003/: pms7003.c  pms7003.h  pms7003_def.h
